# assignment

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/: .env  manage.py
backend/accounts/: enums.py  models.py  serializers.py  urls.py  views.py
backend/accounts/test/: conftest.py  test_api.py
backend/common/: enums.py  http_exceptions.py  models.py  permissions.py  utils.py
backend/config/: urls.py
backend/config/settings/: base.py  develop.py  production.py  test.py
backend/subtasks/: models.py  serializers.py  urls.py  views.py
backend/subtasks/test/: conftest.py  test_api.py  test_signal.py
backend/tasks/: models.py  serializers.py  urls.py  views.py
backend/tasks/test/: conftest.py  test_api.py
